v.2.0.21
- added Big Panel & Large Poster view
- fixed several graphical glitches
- fixed home submenu
- added option to auto show submenu
- optional button on home for profiles/switch user
- moved widgets load to startup to improve speed
- cleanup of settings
- changed notify sound


v.2.0.15
- NOW compatible with xbmc/kodi 14 (helix)
- new enhanced home screen widgets
- option for submenus in home
- overall polishing of classic theme
- changed homemenu reorder in skin settings
- added shortcuts to skin settings
- added profiles in settings
- added highres backgrounds for tile selection
- new now playing graphics in modern theme
- new osd panel in modern theme

v.2.0.10
- added dependency to script.favourites
- artwork downloader now optional
- first attempt for mouse and touch support
- changed bannerplex to vertical scroll
- added extra row to bannerplexview
- fixed watched percentage wrong with MB3
- added scrollbar to views
- fixed issue with custom tiles
- added update library in side menu
- disabled auto run of artwork downloader

v.2.0.6
- added extended view
- added bannerplex view
- added progress dialog
- fixed minor graphic glitches
- added plexbmc tile
- added method to add custom buttons to menu
- new method for sorting home tiles 
- added watched/unwatched icon in all views
- fixed issue with custom tile images for MB3 libraries
- added support for (optional) Lyrics in music
- cleaned up music views

v.1.9.9
- fixed several issues with dialogs and overlays
- improved banner views
- added setting to hide titles on home menu tiles
- changed some dialogs; buttons now in the dialog

v.1.9.7
- fixed some language strings
- added regular thumb as fallback for missing landscape banners
- changed used fonts to opensource variant
- changed modern theme as default, traditional to classic
- added series-record support for MediaPortal PVR

v.1.9.6
- Added tile for YouTube plugin
- Added custom Netflix submenu (direct access)