@@ -17,7 +17,7 @@
         <control type="image">
             <!--TIME Icon-->
             <posx>40</posx>
-            <posy>38</posy>
+            <posy>43</posy>
             <width>64</width>
             <height>64</height>
             <texture>pvr/icons/pvr_record.png</texture>
@@ -31,8 +31,9 @@
             <align>left</align>
             <aligny>center</aligny>
             <textcolor>white</textcolor>
+			<label>$ADDON[pvr.dvblink 32011]</label>
         </control>
-        <control type="group">
+        <control type="group" description ="radio buttons">
             <posx>40</posx>
             <posy>120</posy>
             <width>720</width>
@@ -43,7 +44,7 @@
                 <posy>0</posy>
                 <height>40</height>
                 <width>720</width>
-                <label>$ADDON[pvr.wmc 30101]</label>
+                <label>$ADDON[pvr.wmc 30101]$ADDON[pvr.dvblink 32012]</label>
                 <font>Reg27</font>
                 <textcolor>white</textcolor>
                 <align>left</align>
@@ -59,7 +60,7 @@
                 <posy>45</posy>
                 <height>40</height>
                 <width>720</width>
-                <label>$ADDON[pvr.wmc 30102]</label>
+                <label>$ADDON[pvr.wmc 30102]$ADDON[pvr.dvblink 32013]</label>
                 <font>Reg27</font>
                 <textcolor>white</textcolor>
                 <align>left</align>
@@ -74,6 +75,7 @@
             <posy>230</posy>
             <width>720</width>
             <height>150</height>
+			<visible>System.HasAddon(pvr.wmc)</visible>
             <control type="spincontrolex" id="12">
                 <description>series runtype</description>
                 <posx>0</posx>
