@@ -7,6 +7,7 @@ v.2.0.21
 - moved widgets load to startup to improve speed
 - cleanup of settings
 - changed notify sound
+- support for series recordings in DVBlink PVR
 
 
 v.2.0.15
